# fdck

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README  README.md  todo
drivers/: CMakeLists.txt  adr_test.cpp  adv_diff_1D.cpp  aux_dof_example.cpp  chemokines.cpp  chemokines_active_inactive_dcs.cpp  chemokines_auto.cpp  chemokines_more_binding.cpp  diffusion_2D_manual.cpp  keller_segel_1D.cpp  keller_segel_2D_fdfv.cpp  minimal_1.cpp  minimal_1_dimensional.cpp  minimal_2.cpp  minimal_2_dimensional.cpp  nonlinear_diffusion.cpp  wasm_test.cpp
drivers_experimental/: CMakeLists.txt  chemokines_leading_order.cpp  immature_dcs.cpp  inhibition.cpp  keller_segel_1D.cpp  keller_segel_1D_fdfv.cpp  keller_segel_2D_fdfv.cpp  ks_diffusion_test.cpp  no_flux_bcs_test.cpp  variable_bcs_test.cpp  wasm_test.cpp
inc/: problem.h  residual.h  solver.h
params/: active_inactive_dcs.ini  immature_dcs.ini  keller_segel.ini  minimal.ini  minimal_dimensional.ini  more_binding.ini
src/: main.cpp  problem.cpp
tests/: CMakeLists.txt  test_1D_diffusion.cpp  test_aux_dofs.cpp  test_blah.cpp  test_config.cpp  test_config.ini  test_integrate.cpp  test_lerp.cpp  test_min_max.cpp  test_read_csv.cpp  test_read_csv.csv  test_read_csv_comma.csv  test_read_csv_with_header.csv
tools/: 3d_animate.plt  3dplot.plt  animate.plt  animate_derivs.plt  build_linux_win_driver_zip.bash  compare_old_new_chemokine_models.plt  mega_plot.plt  parula_lines.pal  plot.py  plot_matrix.plt  simple_animate.plt  trace.plt
